# md_to_rag

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.codex/: README.md
.github/workflows/: ci.yml
.hermes/: project-status.md
docs/: versioning.md
docs/adr/: 0001-raganything-internal-adapter.md
docs/contracts/: public-contract-v1.md
docs/plans/: 2026-05-05-agent-cli-contract-plan.md
src/md_to_rag/: __init__.py  api.py  chunk.py  cli.py  diff.py  embed.py  index.py  ingest.py  manifest.py  mcp.py  query.py  raganything_adapter.py  rebuild.py  schemas.py
tests/: test_chunk_documents.py  test_diff_rebuild_artifacts.py  test_embed_artifacts.py  test_index_query_artifacts.py  test_ingest_documents.py  test_public_shells.py  test_raganything_adapter.py
